# qbitcleaner

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.example.yml  pyproject.toml  qbitcleaner.py
.github/workflows/: docker.yml
tests/: __init__.py  conftest.py  test_calculations.py  test_cleanup.py  test_config.py  test_connection.py  test_removal_criteria.py  test_scheduling.py
